# napl

./: .gitignore  README.md  environment.yaml  pyproject.toml
examples/fft/: __init__.py
src/napl/: main.py
src/napl/base/: base.py  global_config.yaml
src/napl/implementation/: Makefile  README.md
src/napl/metric/: __init__.py  accuracy.py
src/napl/module/: __init__.py  decoder.py  encoder.py
src/napl/operation/: __init__.py  add.py  bi2uni.py  compare.py  delay.py  dff.py  div.py  jkff.py  mul.py  relu.py  shiftreg.py  sigmoid.py  sign_abs.py  sqrt.py  square.py  sync.py  tanh.py  uni2bi.py
src/napl/utils/: utils.py
tests/: sweep_test.py
tests/base/: test_global_config.py  test_napl_sim_timesteps_class.py  test_napl_sim_timesteps_func.py
tests/fft/: fft_comparison.py
tests/metric/: test_accuracy.py
tests/module/: test_decoder.py  test_encoder.py
tests/operation/: test_add_any.py  test_bi2uni.py  test_delay.py  test_dff.py  test_div_cordiv.py  test_div_iscb.py  test_gt_rc.py  test_jkff.py  test_lt_rc.py  test_max_rc.py  test_max_tc.py  test_min_rc.py  test_min_tc.py  test_mul_and.py  test_mul_csg.py  test_relu.py  test_relu_cnt.py  test_relu_sat.py  test_shiftreg.py  test_sigmoid_hard.py  test_sign_abs.py  test_sqrt_emit.py  test_sqrt_insert.py  test_sqrt_traceiscb.py  test_sqrt_tracejk.py  test_sqrt_tracejkff.py  test_square.py  test_square_delay.py  test_square_dff.py  test_sync_skewed.py  test_tanh_hard.py  test_uni2bi.py
zoo/uSense/: README.md  classification.py  fft_main_run.py  load_and_segment.py  requirements.txt  spectral_features.py
(+8 files in other folders)
