[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
version = "2025.07.20"
name = "napl"
authors = [
  { name="Di Wu", email="di.wu@ucf.edu" },
]
description = "A neuro-adaptive programming language for general-purpose neuromorphic computing"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python"
]

dependencies = [
    "pyyaml",
    "yamlordereddictloader",
    "loguru",
    "numpy",
    "scipy",
    "pyfiglet",
    "torch>=2.0",
    "matplotlib",
    "pylfsr"
]

# Map script name to the main entry point (napl/main.py -> main())
[project.scripts]
napl = "napl.main:main"

[project.urls]
Homepage = "https://github.com/UnaryLab/napl"
Issues = "https://github.com/UnaryLab/napl/issues"

# Tell hatch where the source is
[tool.hatch.build]
sources = ["src"]

[tool.hatch.metadata]
allow-direct-references = true